--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "eslint": "5.16.0"
   },
   "scripts": {
-"build":"cd client && npm run build",
-"install-client": "cd client && npm install",
+"build":"cd client && npm install && npm run build",
 "heroku-postbuild":"npm run install-client && npm run install build",
     "start": "NODE_ENV=production node app.js",
     "test": "npm run lint && npm run custom-tests && echo 'Done.'",
