--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
 "heroku-postbuild":"cd client && npm install && npm run build",
-    "start": "NODE_ENV=production node app.js",
+    "start": "NODE_ENV=production node app.js && cd client && npm install && npm run build",
     "test": "npm run lint && npm run custom-tests && echo 'Done.'",
     "lint": "./node_modules/eslint/bin/eslint.js . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
     "custom-tests": "echo \"(No other custom tests yet.)\" && echo"
