--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
     "eslint": "5.16.0"
   },
   "scripts": {
-"heroku-prebuild": "echo This runs before Heroku installs dependencies. && cd client && npm install && npm run build",
-  "heroku-postbuild": "echo This runs after Heroku installs dependencies, but before Heroku prunes and caches dependencies.",
-  "heroku-cleanup": "echo This runs after Heroku prunes and caches dependencies.",
-    "start": "NODE_ENV=production node app.js",
+    "start": "cd client && npm install && npm run build",
     "test": "npm run lint && npm run custom-tests && echo 'Done.'",
     "lint": "./node_modules/eslint/bin/eslint.js . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
     "custom-tests": "echo \"(No other custom tests yet.)\" && echo"
