--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eslint": "5.16.0"
   },
   "scripts": {
-    "start": "cd client && npm install && npm run build",
+    "heroku-prebuild": "cd client && npm install && npm run build",
+    "start": "NODE_ENV=production node app.js",
     "test": "npm run lint && npm run custom-tests && echo 'Done.'",
     "lint": "./node_modules/eslint/bin/eslint.js . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
     "custom-tests": "echo \"(No other custom tests yet.)\" && echo"
