--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "sails": "^1.2.4",
     "sails-hook-orm": "^2.1.1",
     "sails-hook-sockets": "^2.0.0",
-    "sails-mongo": "^1.2.0"
+    "sails-mongo": "^1.2.0",
+    "socket.io-events": "^0.4.6"
   },
   "devDependencies": {
     "eslint": "5.16.0"
