--- a/package.json
+++ b/package.json
@@ -31,8 +31,5 @@
     "url": "git://github.com/anonymous node/sails user/expense-tracker.git"
   },
   "author": "anonymous node/sails user",
-  "license": "",
-  "engines": {
-    "node": "^11.13"
-  }
+  "license": ""
 }
